--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Angular2 seed for WindHub",
   "main": "index.js",
   "scripts": {
+    "typings-install": "./node_modules/.bin/typings install",
+    "postinstall": "npm run typings-install",
+    "build": "./node_modules/.bin/webpack --inline --colors --progress --display-error-details --display-cached",
+    "watch": "npm run build -- --watch",
+    "start": "./node_modules/.bin/webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +20,26 @@
   "bugs": {
     "url": "https://github.com/WindHub/angular2-seed/issues"
   },
-  "homepage": "https://github.com/WindHub/angular2-seed#readme"
+  "homepage": "https://github.com/WindHub/angular2-seed#readme",
+  "dependencies": {
+    "angular2": "^2.0.0-beta.15",
+    "core-js": "^2.2.2",
+    "lodash": "^4.11.1",
+    "rxjs": "^5.0.0-beta.6",
+    "zone.js": "^0.6.12"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^0.17.0-rc.7",
+    "es6-promise": "^3.1.2",
+    "es6-shim": "^0.35.0",
+    "gulp": "^3.9.1",
+    "jasmine-core": "2.4.1",
+    "reflect-metadata": "^0.1.3",
+    "source-map-loader": "^0.1.5",
+    "typescript": "^1.8.10",
+    "typings": "^0.8.1",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.12.0"
+  }
 }
