--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "typings-install": "./node_modules/.bin/typings install",
     "postinstall": "npm run typings-install",
-    "build": "./node_modules/.bin/webpack --inline --colors --progress --display-error-details --display-cached",
+    "build": "node node_modules/.bin/webpack --inline --colors --progress --display-error-details --display-cached",
     "watch": "npm run build -- --watch",
-    "start": "./node_modules/.bin/webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
+    "start": "node node_modules/.bin/webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
