--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "typings-install": "./node_modules/.bin/typings install",
     "postinstall": "npm run typings-install",
-    "build": "node node_modules/.bin/webpack --inline --colors --progress --display-error-details --display-cached",
+    "build": "./node_modules/.bin/webpack --inline --colors --progress --display-error-details --display-cached",
     "watch": "npm run build -- --watch",
-    "start": "node node_modules/.bin/webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
+    "start": "./node_modules/.bin/webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,13 +33,16 @@
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
     "jasmine-core": "2.4.1",
     "reflect-metadata": "^0.1.3",
     "source-map-loader": "^0.1.5",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
+    "vinyl-named": "^1.1.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.12.0"
+    "webpack-merge": "^0.12.0",
+    "webpack-stream": "^3.2.0"
   }
 }
