--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
   },
   "homepage": "https://github.com/WindHub/angular2-seed#readme",
   "dependencies": {
-    "angular2": "^2.0.0-beta.15",
-    "core-js": "^2.2.2",
-    "lodash": "^4.11.1",
-    "rxjs": "^5.0.0-beta.6",
-    "zone.js": "^0.6.12"
+    "angular2": "~2.0.0-beta.15",
+    "core-js": "~2.2.2",
+    "lodash": "~4.11.1",
+    "rxjs": "~5.0.0-beta.6",
+    "zone.js": "~0.6.12"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^0.17.0-rc.7",
-    "es6-promise": "^3.1.2",
-    "es6-shim": "^0.35.0",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-util": "^3.0.7",
-    "jasmine-core": "2.4.1",
-    "reflect-metadata": "^0.1.3",
-    "source-map-loader": "^0.1.5",
-    "typescript": "^1.8.10",
-    "typings": "^0.8.1",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.12.0",
-    "webpack-stream": "^3.2.0"
+    "es6-promise": "~3.1.2",
+    "es6-shim": "~0.35.0",
+    "gulp": "~3.9.1",
+    "gulp-rename": "~1.2.2",
+    "gulp-util": "~3.0.7",
+    "jasmine-core": "~2.4.1",
+    "reflect-metadata": "~0.1.3",
+    "source-map-loader": "~0.1.5",
+    "typescript": "~1.8.10",
+    "typings": "~0.8.1",
+    "vinyl-named": "~1.1.0",
+    "webpack": "~1.13.0",
+    "webpack-dev-server": "~1.14.1",
+    "webpack-merge": "~0.12.0",
+    "webpack-stream": "~3.2.0"
   }
 }
